syntax = "proto3";

package qubic.archiver.archive.pb.api;

option go_package = "github.com/qubic/go-archiver/protobuff/";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "archive.proto";

message QxAssetTransferAPI {
  string asset_issuer = 1;
  string asset_name = 2;
  uint32 tick_number = 3;
  string source_id = 4;
  string dest_id = 5;
  int64 amount = 6;
  Transaction transaction = 7;
  TransactionStatus transactionStatus = 8;
}